--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "tightenco/ziggy": "^2.4",
-        "ext-bcmath": "*",
-        "ext-fileinfo": "*",
-        "ext-mbstring": "*",
-        "ext-openssl": "*",
-        "ext-xml": "*",
-        "ext-pdo_sqlite": "*",
-        "ext-sqlite3": "*",
-        "ext-curl": "*",
-        "ext-zip": "*",
-        "ext-gd": "*"
+        "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
