--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
           SOURCE: "."
           REMOTE_HOST: ${{ secrets.VPS_HOST }}
           REMOTE_USER: ${{ secrets.VPS_USER }}
-          TARGET: "/var/www/html/family-share-laravel",
+          TARGET: "/var/www/html/family-share-laravel"
           EXCLUDE: "node_modules/"
 
       - name: Run Remote/Artisan Commands
