--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           REMOTE_HOST: ${{ secrets.VPS_HOST }}
           REMOTE_USER: ${{ secrets.VPS_USER }}
           TARGET: "/var/www/html/family-share-laravel"
-          EXCLUDE: "node_modules/"
+          ARGS: "-rlDzvO --omit-dir-times --no-perms"
 
       - name: Run Remote/Artisan Commands
         uses: appleboy/ssh-action@v0.1.6
