implement steam and cdkeys api logic

--- a/.env.example
+++ b/.env.example
@@ -63,5 +63,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-STEAM_ID=
-STEAM_KEY=
+STEAM_API_KEY=
+CDKEYS_ALGOLIA_API_KEY=
+CDKEYS_ALGOLIA_APPLICATION_ID=
