add supervisor queue restart to deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,3 +52,5 @@ jobs:
             cd /var/www/html/family-share-laravel
             php artisan migrate --force
             php artisan optimize
+
+            sudo supervisorctl restart laravel-worker:*
