add queue restart

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,4 +53,4 @@ jobs:
             php artisan migrate --force
             php artisan optimize
 
-            sudo supervisorctl restart laravel-worker:*
+            php artisan queue:restart
